Hide vertical scrollbar - fix mobile

--- a/home/_sass/_home-specific.scss
+++ b/home/_sass/_home-specific.scss
@@ -7,7 +7,9 @@ html,
 body {
   height: 100%;
   margin: 0;
-  overflow: hidden;
+  @include tablet {
+    overflow: hidden;
+  }
 }
 
 #home {
